# skadi

./: .gitignore  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
html/: main.html  topbar.html
rust/: Cargo.toml  widget.html
rust/src/: api.rs  config.rs  error.rs  events.rs  log.rs  main.rs  server.rs
scripts/: generate-registry.js
src/: App.tsx  index.css  main.tsx  topbar.tsx  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  paths.rs  plugins.rs
src/context/: plugin-context.tsx
src/hooks/: use-plugin.ts
src/types/: plugin.ts
