[package]
name = "skadi"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
webkit6 = "0.4"
gtk4-layer-shell = "0.5.0"
libc = "0.2.174"
traccia = "2.2.5"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
thiserror = "2.0.12"
jsonc-parser = { version = "0.26.2", features = ["serde"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
